# kg-pipeline

./: .gitignore  .gitmodules  README.md  config.yaml  pom.xml  pyproject.toml  source1_target1statistics.json  student.rml.ttl  test_rml_output.ttl
deprecated/: prompts_util.py  test_some.py
experiments/llm4rml/: ontology.ttl
experiments/pipeline/: source.nt  source.txt  target.nt
kg_core/: config.py
kg_core/llm/: __init__.py  anthropic.py  google.py  lamacpp.py  model.py  oai.py  prompt.py
kg_core/metrics/: figures.py  metrics.py  ontology.py  sparql-metrics.yaml
kg_core/utils/: cache.py  hash.py  journal.py  log.py  mongodb.py  output_parser.py  provenance.py  rdf.py
kg_data/connector/: __init__.py  imdb.py
kg_data/preprocessing/: filter.py  shade.py  wikidata.py
kg_tasks/: README.md  __init__.py  task.py
kg_tasks/completion/: completion.py
kg_tasks/map/: llm4rml.py  rml_mapper.py  rml_util.py
kg_tasks/match/: blocking_klinker.py  entity_matcher.py  limes.py  llm4limes.py
kg_tasks/repair/: rdfrepair.py
kg_tests/: README.md  test_anthropic.py  test_final_experiment.py  test_gemini.py  test_hierachy_scores.py  test_metrics.py  test_misc.py  test_openai.py  test_repair.py  test_rml.py  test_sample.py  test_stats.py
kg_tests/playground/: test_annotations.py  test_cache.py  test_config.py  test_higherorder_fun.py  test_journal.py  test_llm4mimetype.py  test_llmkgbench.py  test_metrics.py  test_mongodb.py  test_prompts.py  test_sparql.py  test_subprocess.py  test_utils.py  test_wikidata_external.py
kg_tests/resources/: hiera_score_onto.ttl  hiera_score_ref.ttl  hiera_score_test.ttl
kg_ui/: README.md  evaluate.py  execute.py  gui.py  util.py
llm4kg_benchmark/: README.md  rml_test_dummy.py
llm4kg_benchmark/eval/: evaluation.py  overlap.py
llm4kg_benchmark/map/: bench_rml.py
llm4kg_core/: config.py  html_parser.py
llm4kg_dataset/: README.md  examples.py  filter_relations.py  get_wikitext_as_json.py  imdb.py
llm4kg_input/: README.md  imdb.py
llm4kg_tasks/: README.md  detect_format.py  instructions.py  prompts.json  prompts.py  run.py  run_inference.py  task.py
llm4kg_tests/: README.md  test_anthropic.py  test_cache.py  test_config.yaml  test_llmconfig.py  test_openai.py  test_preprocess.py  test_rml.py  test_sparql.py  test_wikidata_external.py
llm4kg_ui/: streamlit.py
resources/: context.jsonld
scripts/: gen-diamonds-reference.sh  install-rmlmapperjava.sh  limes.sh  llama-cpp-completion.py  llama-cpp-completion.sh  mongodb-cache.sh  pytest.sh
(+164 files in other folders)
